--- a/login-styles.css
+++ b/login-styles.css
@@ -25,7 +25,7 @@ body {
     height: 100vh;
     margin: 0;
     background-image: url('espacio.jpg'); /* Cambiar el nombre según tu imagen */
-background-color: black;
+background-color: 000000;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
